# Chat-FastAPI-React

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  init_db.py  pyproject.toml  pytest.ini  template.env
backend/: database.py  db_config.py  dependencies.py  init_app.py  init_db.py  main.py  settings.py  tables.py
backend/api/: __init__.py  auth.py  chat_members.py  chats.py  contact.py  contacts.py  data.py  messages.py  user.py
backend/api/docs/: auth.py  chat_members.py  chats.py  contacts.py  messages.py  user.py
backend/core/: decorators.py  docs.py  time.py
backend/dao/: __init__.py  chat_members.py  chats.py  contacts.py  messages.py  tokens.py  users.py
backend/db/: facade.py  interface.py
backend/db/dao/: __init__.py  base_dao.py  chat_members.py  chats.py  contacts.py  messages.py  (+2 more)
backend/metrics/: __init__.py  auth.py  chat_members.py  chats.py  contacts.py  messages.py  user.py  ws.py
backend/models/: __init__.py  chat.py  chat_members.py  contact.py  message.py  token.py  user.py  ws.py
backend/services/: __init__.py  auth.py  chat.py  chat_members.py  contact.py  db_data.py  export.py  files.py  get_chat_members.py  messages.py  token.py  user.py  ws.py  ws_connection_manager.py
backend/tests/: base.py  conftest.py  data.py  test_auth.py  test_chat_members.py  test_chats.py  test_contact.py  test_contacts.py  test_in_ws_messages.py  test_messages.py  test_startup.py  test_user.py
frontend/: package-lock.json  package.json
frontend/public/: config.js  index.html
frontend/src/: App.js  index.js
(+127 files in other folders)
